<resources>

    <!-- Main strings -->
    <string name="app_name">Inventory</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="input">Input:</string>
    <string name="weight">Weight:</string>
    <string name="nullStr">null</string>

    <string name="sample">Sample</string>
    <string name="boxlabel">Box:</string>
    <string name="box">Box</string>
    <string name="setbox">Set Box</string>
    <string name="weightAbr">Wt</string>
    <string name="num">Num</string>

    <string name="not_connected">null</string>

    <!-- Menu strings -->
    <string name="settings">Settings</string>
    <string name="export">Export</string>
    <string name="connect_scale_title">Connect Scale</string>
    <string name="clear_data">Clear Data</string>
    <string name="help">Help</string>
    <string name="about_title">About</string>
    <string name="versiontitle">Version</string>

    <!-- Dialog strings -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="delete_msg_1">This will delete all samples and seeds associated with</string>
    <string name="delete_msg_2">Do you wish to proceed?</string>
    <string name="delete">Delete</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="set_person">Set Person</string>
    <string name="no_blank">Names cannot be left blank.</string>
    <string name="person_set">Person set as:</string>

    <string name="delete_database">"This will delete all data from the database. Proceed?"</string>
    <string name="data_deleted">"Data deleted"</string>

    <string name="sending_file">Sending File...</string>

    <string name="updatemsg">Changelog</string>

    <!-- Export strings -->
    <string name="export_data">Export data</string>
    <string name="export_choice">How would you like to export the data?</string>
    <string name="export_csv">Flat file (CSV)</string>
    <string name="export_sql">Query file (SQL)</string>

    <string name="export_success">File exported successfully.</string>

    <string name="database_empty">Database currently empty.</string>

    <!-- About strings -->
    <string name="about">About Inventory</string>
    <string name="dev_trevor">Trevor Rife</string>
    <string name="ksu">Kansas State University</string>
    <string name="dev_trevor_email">trife@ksu.edu</string>
    <string name="dev_megan">Megan Calvert</string>
    <string name="dev_megan_email">megzcalvert@ksu.edu</string>
    <string name="dev_jesse">Jesse Poland</string>
    <string name="dev_jesse_email">jpoland@ksu.edu</string>
    <string name="wg_site">http://wheatgenetics.org\n</string>

    <string name="otherapps">Other Apps</string>

    <!-- Scale not found -->
    <string name="no_scale">Scale Not Found</string>
    <string name="connect_scale">Please connect scale with OTG cable and turn the scale on</string>
    <string name="try_again">Try Again</string>
    <string name="ignore">Ignore</string>
    <string name="scale_disconnect">Scale disconnected</string>

    <!-- Person  strings -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>
