<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4">

    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@color/main_primary"
                android:fitsSystemWindows="true"
                android:minHeight="?attr/actionBarSize"
                app:popupTheme="@style/AppToolbar"
                app:theme="@style/AppToolbar" />

            <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/dataEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:columnCount="3"
                android:orientation="horizontal"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/tvBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boxlabel"
                    android:layout_gravity="right"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvBoxNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:text=""
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btBox"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/setbox" />

                <TextView
                    android:id="@+id/tvInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/input"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etInput"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:lines="1"
                    android:singleLine="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tvWeightLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/weight"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etWeight"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/nullStr"
                    android:inputType="number"
                    android:lines="1"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textSize="20sp" />
            </GridLayout>

            <LinearLayout
                android:id="@+id/dataTable"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/dataEntry"
                android:layout_marginTop="20dp">

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:weightSum="10">

                    <TableRow
                        android:id="@+id/tableRowTitles"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvNumTable"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".16"
                            android:gravity="center"
                            android:text="@string/num"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvBoxTable"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".16"
                            android:gravity="center"
                            android:text="@string/box"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvIdTable"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:gravity="center"
                            android:text="@string/sample"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvWtTable"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".16"
                            android:gravity="center"
                            android:text="@string/weightAbr"
                            android:textSize="20dp"
                            android:textStyle="bold" />
                    </TableRow>

                    <ScrollView
                        android:id="@+id/svData"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp">

                        <TableLayout
                            android:id="@+id/tlInventory"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"></TableLayout>
                    </ScrollView>
                </TableLayout>
            </LinearLayout>
        </RelativeLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/nvView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@android:color/white"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/drawer_view"
            app:theme="@style/NavigationDrawerTheme" />

    </android.support.v4.widget.DrawerLayout>
</LinearLayout>